# VibeCast

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VibeCastConfig.h.in  comandos.txt  data.db  datos_prueba.sql  db_script.txt  db_setup.sql
docs/: comandos.txt
include/BaseDatos/: crud.h  crud_albumes.h  crud_artistas.h  crud_canciones.h  crud_usuarios.h  estructuras.h  liberadores.h
include/InterfazGrafica/: colores.h  interfaces.h  login.h  objetos_visuales.h  render.h
include/Utilidades/: memmgr.h  nodos.h  utils.h
include/audio/: cola_reproduccion.h  player.h
include/core/: async.h  main.h  main_callbacks.h  winmain.h
include/db/: crud.h  crud_usuarios.h  datos.h  dbmgr.h  estructuras.h
include/gui/: objeto_visual.h
include/ui/: conexiones.h  gui.h  interfaces.h  login.h  render.h
include/utils/: async.h  callback.h  datetime.h  filemgr.h  log.h  macros.h  memmgr.h  nodos.h  utils.h
include/utils/nodos/: abb.h  cola.h  constants.h  fntypes.h  lista.h  nodo.h  pila.h
include/video/: render.h
src/BaseDatos/: crud_albumes.c  crud_artistas.c  crud_canciones.c  crud_usuarios.c  datos.c  dbmgr.c  liberadores.c
src/InterfazGrafica/: login.c  objetos_visuales.c  render.c
src/Nucleo/: main.c
src/Utilidades/: memmgr.c  nodos.c  utils.c
src/audio/: cola_reproduccion.c  player.c
src/core/: async.c  main.c  menu.c  prueba.c  test.c
src/db/: datos.c  dbmgr.c  estructuras.c
src/gui/: login.c
src/ui/: ColadeReproduccion.c  GestionAmigos.c  artistas.c  canciones.c  colaReproduccion.c  cola_repr.c  conexiones.c  estadisticasReportes.c  gui.c  historial.c  interfaces.c  login.c  menu_principal.c  playlists.c  premium.c  recomendaciones.c  render.c  usuario.c
src/utils/: async.c  datetime.c  filemgr.c  log.c  memmgr.c  nodos.c  utils.c
src/utils/nodos/: abb.c  cola.c  lista.c  nodo.c  pila.c
src/video/: render.c
ui/: app.js  index.html
ui/Amigos/: amigos.html  amigosApp.js  amigosStyles.css
ui/Biblioteca/: biblioteca.html  bibliotecaApp.js  bibliotecaStyles.css
ui/Historial/: historial.html  historialApp.js  historialStyles.css
ui/Login/: app.js  index.html  style.css
ui/Menu/: menu.html  menuApp.js  menuStyles.css
ui/Perfil/: perfil.html  perfilApp.js  perfilStyles.css
ui/Registro/: registro.html  registroApp.js  registroStyles.css
ui/Reproductor/: reproductorApp.js  reproductorStyles.css
